// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styles bodyLong01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "0.875rem",
  "fontWeight": 400,
  "letterSpacing": "0.16px",
  "lineHeight": "1.25rem",
}
`;

exports[`styles bodyLong01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 0.875rem;
font-weight: 400;
line-height: 1.25rem;
letter-spacing: 0.16px;"
`;

exports[`styles bodyLong02 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "1.5rem",
}
`;

exports[`styles bodyLong02 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1rem;
font-weight: 400;
line-height: 1.5rem;
letter-spacing: 0;"
`;

exports[`styles bodyShort01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "0.875rem",
  "fontWeight": 400,
  "letterSpacing": "0.16px",
  "lineHeight": "1.125rem",
}
`;

exports[`styles bodyShort01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 0.875rem;
font-weight: 400;
line-height: 1.125rem;
letter-spacing: 0.16px;"
`;

exports[`styles bodyShort02 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "1.375rem",
}
`;

exports[`styles bodyShort02 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1rem;
font-weight: 400;
line-height: 1.375rem;
letter-spacing: 0;"
`;

exports[`styles caption01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "0.75rem",
  "fontWeight": 400,
  "letterSpacing": "0.32px",
  "lineHeight": "1rem",
}
`;

exports[`styles caption01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 0.75rem;
font-weight: 400;
line-height: 1rem;
letter-spacing: 0.32px;"
`;

exports[`styles code01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace",
  "fontSize": "0.75rem",
  "fontWeight": 400,
  "letterSpacing": "0.32px",
  "lineHeight": "1rem",
}
`;

exports[`styles code01 should be printable 2`] = `
"font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
font-size: 0.75rem;
font-weight: 400;
line-height: 1rem;
letter-spacing: 0.32px;"
`;

exports[`styles code02 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace",
  "fontSize": "0.875rem",
  "fontWeight": 400,
  "letterSpacing": "0.32px",
  "lineHeight": "1.25rem",
}
`;

exports[`styles code02 should be printable 2`] = `
"font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
font-size: 0.875rem;
font-weight: 400;
line-height: 1.25rem;
letter-spacing: 0.32px;"
`;

exports[`styles display01 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "2.625rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "3.125rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "3.375rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "4rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "3.75rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "4.375rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "4.75rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "5.375rem",
    },
  },
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "2.625rem",
  "fontWeight": 300,
  "letterSpacing": 0,
  "lineHeight": "3.125rem",
}
`;

exports[`styles display01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 2.625rem;
font-weight: 300;
line-height: 3.125rem;
letter-spacing: 0;"
`;

exports[`styles display02 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "2.625rem",
      "fontWeight": 600,
      "letterSpacing": 0,
      "lineHeight": "3.125rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "3.375rem",
      "fontWeight": 600,
      "letterSpacing": 0,
      "lineHeight": "4rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "3.75rem",
      "fontWeight": undefined,
      "letterSpacing": 0,
      "lineHeight": "4.375rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "4.75rem",
      "fontWeight": 600,
      "letterSpacing": 0,
      "lineHeight": "5.375rem",
    },
  },
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "2.625rem",
  "fontWeight": 600,
  "letterSpacing": 0,
  "lineHeight": "3.125rem",
}
`;

exports[`styles display02 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 2.625rem;
font-weight: 600;
line-height: 3.125rem;
letter-spacing: 0;"
`;

exports[`styles display03 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontSize": "4.25rem",
      "letterSpacing": 0,
      "lineHeight": "4.875rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontSize": "5.75rem",
      "letterSpacing": "-0.64px",
      "lineHeight": "6.375rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontSize": "7.625rem",
      "lineHeight": "8.125rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontSize": "9.75rem",
      "letterSpacing": "-0.96px",
      "lineHeight": "10.25rem",
    },
  },
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "2.625rem",
  "fontWeight": 300,
  "letterSpacing": 0,
  "lineHeight": "3.125rem",
}
`;

exports[`styles display03 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 2.625rem;
font-weight: 300;
line-height: 3.125rem;
letter-spacing: 0;"
`;

exports[`styles display04 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontSize": "4.25rem",
      "lineHeight": "4.875rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontSize": "5.75rem",
      "letterSpacing": "-0.64px",
      "lineHeight": "6.375rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontSize": "7.625rem",
      "letterSpacing": "-0.64px",
      "lineHeight": "8.125rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontSize": "9.75rem",
      "letterSpacing": "-0.96px",
      "lineHeight": "10.25rem",
    },
  },
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "2.625rem",
  "fontWeight": 600,
  "letterSpacing": 0,
  "lineHeight": "3.125rem",
}
`;

exports[`styles display04 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 2.625rem;
font-weight: 600;
line-height: 3.125rem;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading04 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "1.625rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "1.5rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "1.875rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "1.75rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "2.25rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "2rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "2.5rem",
    },
  },
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1.25rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "1.625rem",
}
`;

exports[`styles expressiveHeading04 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1.25rem;
font-weight: 400;
line-height: 1.625rem;
letter-spacing: 0;"
`;

exports[`styles expressiveHeading05 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "2.25rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "2.75rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "2.625rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "3.125rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "3rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "3.5rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
      "fontSize": "3.75rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "4.375rem",
    },
  },
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1.75rem",
  "fontWeight": 300,
  "letterSpacing": 0,
  "lineHeight": "2.25rem",
}
`;

exports[`styles expressiveHeading05 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1.75rem;
font-weight: 300;
line-height: 2.25rem;
letter-spacing: 0;"
`;

exports[`styles heading01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "0.875rem",
  "fontWeight": 600,
  "letterSpacing": "0.16px",
  "lineHeight": "1.125rem",
}
`;

exports[`styles heading01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 0.875rem;
font-weight: 600;
line-height: 1.125rem;
letter-spacing: 0.16px;"
`;

exports[`styles heading02 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1rem",
  "fontWeight": 600,
  "letterSpacing": 0,
  "lineHeight": "1.375rem",
}
`;

exports[`styles heading02 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1rem;
font-weight: 600;
line-height: 1.375rem;
letter-spacing: 0;"
`;

exports[`styles heading03 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1.25rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "1.625rem",
}
`;

exports[`styles heading03 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1.25rem;
font-weight: 400;
line-height: 1.625rem;
letter-spacing: 0;"
`;

exports[`styles helperText01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "0.75rem",
  "fontStyle": "italic",
  "letterSpacing": "0.32px",
  "lineHeight": "1rem",
}
`;

exports[`styles helperText01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 0.75rem;
font-style: italic;
line-height: 1rem;
letter-spacing: 0.32px;"
`;

exports[`styles label01 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "0.75rem",
  "fontWeight": 400,
  "letterSpacing": "0.32px",
  "lineHeight": "1rem",
}
`;

exports[`styles label01 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 0.75rem;
font-weight: 400;
line-height: 1rem;
letter-spacing: 0.32px;"
`;

exports[`styles productiveHeading04 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "1.5rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "1.875rem",
}
`;

exports[`styles productiveHeading04 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 1.5rem;
font-weight: 400;
line-height: 1.875rem;
letter-spacing: 0;"
`;

exports[`styles productiveHeading05 should be printable 1`] = `
Object {
  "fontFamily": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif",
  "fontSize": "2rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "2.5rem",
}
`;

exports[`styles productiveHeading05 should be printable 2`] = `
"font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
font-size: 2rem;
font-weight: 400;
line-height: 2.5rem;
letter-spacing: 0;"
`;

exports[`styles quotation01 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "1.625rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "1.5rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "1.875rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "1.75rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "2.25rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "2rem",
      "fontWeight": 400,
      "letterSpacing": 0,
      "lineHeight": "2.5rem",
    },
  },
  "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
  "fontSize": "1.25rem",
  "fontWeight": 400,
  "letterSpacing": 0,
  "lineHeight": "1.625rem",
}
`;

exports[`styles quotation01 should be printable 2`] = `
"font-family: 'IBM Plex Serif', 'Georgia', Times, serif;
font-size: 1.25rem;
font-weight: 400;
line-height: 1.625rem;
letter-spacing: 0;"
`;

exports[`styles quotation02 should be printable 1`] = `
Object {
  "breakpoints": Object {
    "@media (min-width: 42rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "2.25rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "2.75rem",
    },
    "@media (min-width: 66rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "2.625rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "3.125rem",
    },
    "@media (min-width: 82rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "3rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "3.5rem",
    },
    "@media (min-width: 99rem)": Object {
      "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
      "fontSize": "3.75rem",
      "fontWeight": 300,
      "letterSpacing": 0,
      "lineHeight": "4.375rem",
    },
  },
  "fontFamily": "'IBM Plex Serif', 'Georgia', Times, serif",
  "fontSize": "1.75rem",
  "fontWeight": 300,
  "letterSpacing": 0,
  "lineHeight": "2.25rem",
}
`;

exports[`styles quotation02 should be printable 2`] = `
"font-family: 'IBM Plex Serif', 'Georgia', Times, serif;
font-size: 1.75rem;
font-weight: 300;
line-height: 2.25rem;
letter-spacing: 0;"
`;
